; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_drop.c_test_refs_reflog_drop__can_drop_all_the_entries.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/reflog/extr_drop.c_test_refs_reflog_drop__can_drop_all_the_entries.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@entrycount = common dso_local global i64 0, align 8
@g_reflog = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_reflog_drop__can_drop_all_the_entries() #0 {
  %1 = load i64, i64* @entrycount, align 8
  %2 = add nsw i64 %1, -1
  store i64 %2, i64* @entrycount, align 8
  %3 = icmp sgt i64 %2, 0
  %4 = zext i1 %3 to i32
  %5 = call i32 @cl_assert(i32 %4)
  br label %6

6:                                                ; preds = %10, %0
  %7 = load i32, i32* @g_reflog, align 4
  %8 = call i32 @git_reflog_drop(i32 %7, i32 0, i32 1)
  %9 = call i32 @cl_git_pass(i32 %8)
  br label %10

10:                                               ; preds = %6
  %11 = load i64, i64* @entrycount, align 8
  %12 = add nsw i64 %11, -1
  store i64 %12, i64* @entrycount, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %6, label %14

14:                                               ; preds = %10
  %15 = load i32, i32* @g_reflog, align 4
  %16 = call i32 @git_reflog_drop(i32 %15, i32 0, i32 1)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = load i32, i32* @g_reflog, align 4
  %19 = call i64 @git_reflog_entrycount(i32 %18)
  %20 = trunc i64 %19 to i32
  %21 = call i32 @cl_assert_equal_i(i32 0, i32 %20)
  ret void
}

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reflog_drop(i32, i32, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i64 @git_reflog_entrycount(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
